--- a/src/index.html
+++ b/src/index.html
@@ -18,21 +18,22 @@
 
   <!-- Header -->
   <header class="header">
-    <button class="header__nav--btn">
-      <i class="fa-solid fa-bars"></i>
-    </button>
-    <div class="header__search">
-      <i class="fa-solid fa-magnifying-glass"></i>
-      <form>
-        <label for="search" hidden>Search for firends, posts, or live</label>
-        <input type="text" id="search" placeholder="Search">
-      </form>
-    </div>
-    <button class="header__profile--btn">
-      <!-- <i class="fa-solid fa-user"></i> -->
-      <img src="./assets/images/profile-pic.jpg" alt="">
-    </button>
-    <!-- @todo: make navigation hide on scroll event on main content -->
+    <section class="header__container">
+      <button class="header__nav--btn">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <div class="header__search">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <form>
+          <label for="search" hidden>Search for firends, posts, or live</label>
+          <input type="text" id="search" placeholder="Search">
+        </form>
+      </div>
+      <button class="header__profile--btn">
+        <!-- <i class="fa-solid fa-user"></i> -->
+        <img src="./assets/images/profile-pic.jpg" alt="">
+      </button>
+    </section>
     <!-- Quick navigation -->
     <nav class="navigation">
       <ul>
