--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./scss/main.scss">
   <title>Document</title>
 </head>
-<body>
+<body class="">
 
   <!-- Header -->
   <header class="header">
@@ -30,7 +30,6 @@
         </form>
       </div>
       <button class="header__profile--btn">
-        <!-- <i class="fa-solid fa-user"></i> -->
         <img src="./assets/images/profile-pic.jpg" alt="">
       </button>
     </section>
