--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <body class="">
 
   <!-- Header -->
-  <header class="header">
+  <header class="header ">
     <section class="header__container">
       <button class="header__nav--btn">
         <i class="fa-solid fa-bars"></i>
@@ -51,10 +51,10 @@
     </section>
 
     <!-- Make post -->
-    <section class="content__post hidden">
-      <div class="content__post--text-img">
+    <section class="content__post hidden ">
+      <div class="content__post--text-img ">
         <form id="post-form">
-          <textarea id="post-text" type="text" placeholder="Share your thoughts..." rows="3" cols="40"></textarea>
+          <textarea id="post-text" type="text" placeholder="Share your thoughts..." rows="3" cols="40" class=""></textarea>
           <div class="post-form-control">
             <label for="image-file">Share an Image <i class="fa-solid fa-image"></i></label>
             <section class="upload-notifications">
@@ -73,7 +73,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer ">
     <a class="footer__item footer__nav--home">
       <i class="fa-solid fa-house-chimney"></i>
     </a>
