--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,13 @@
         <i class="fa-solid fa-bars"></i>
       </button>
       <div class="header__search">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <form>
-          <label for="search" hidden>Search for firends, posts, or live</label>
-          <input type="text" id="search" placeholder="Search">
-        </form>
+        <div>
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <form>
+            <label for="search" hidden>Search for firends, posts, or live</label>
+            <input type="text" id="search" placeholder="Search">
+          </form>
+        </div>
       </div>
       <button class="header__profile--btn">
         <img src="./assets/images/profile-pic.jpg" alt="">
