additional method to close post modal

--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
 
   <!-- Footer -->
   <footer class="footer ">
-    <a class="footer__item footer__nav--home">
+    <button class="footer__item footer__nav--home">
       <i class="fa-solid fa-house-chimney"></i>
-    </a>
+    </button>
     <button class="footer__item footer__nav--post">
       <i class="fa-solid fa-plus"></i>
     </button>
