added fake nav and touch and swipe options to close

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,20 @@
         <img src="./assets/images/profile-pic.jpg" alt="">
       </button>
     </section>
+
+    <div class="header__main--nav-close hidden">
+      <button><i class="fa-solid fa-xmark"></i></button>
+    </div>
+    <section class="header__main--nav hidden" >
+      <nav>
+        <ul>
+          <a href="#"><li>Friends</li></a>
+          <a href="#"><li>Groups</li></a>
+          <a href="#"><li>Following</li></a>
+          <a href="#"><li>Create a Group</li></a>
+        </ul>
+      </nav>
+    </section>
     <!-- Quick navigation -->
     <nav class="navigation">
       <ul>
