profile img set to lazy load

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <button class="header__profile--btn">
-        <img src="./assets/images/profile-pic.jpg" alt="">
+        <img src="./assets/images/profile-pic.jpg" alt="" loading=""lazy>
       </button>
     </section>
 
